Fix right margin white space

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ ul {
 }
 
 img {
-	width:75%;
+	width:60%;
 }
 
 footer {
@@ -121,7 +121,6 @@ a:-webkit-any-link {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100%;
     height: 80vh;
     padding: 0 2rem;
     background: var(--main-gray);
